# mysec

./: .gitignore  Cargo.toml  README.md
database/migrations/1/: down.sql  up.sql
database/migrations/2/: down.sql  up.sql
database/migrations/3/: down.sql  up.sql
database/migrations/4/: down.sql  up.sql
database/migrations/5/: down.sql  up.sql
database/migrations/6/: down.sql  up.sql
public/: index.html
src/: lib.rs  main.rs  models.rs  modules.rs  secure_invite.rs
src/models/: persons.rs
src/models/persons/: control.rs  error.rs  model.rs  tests.rs
src/modules/: config.rs  db.rs  verify.rs
src/modules/config/: actions.rs  getters.rs  mutations.rs  state.rs
src/modules/db/: actions.rs  getters.rs  mutations.rs  state.rs
src/modules/verify/: actions.rs  getters.rs  mutations.rs  state.rs
src/secure_invite/: crypt.rs  keypair.rs
