[package]
name = "secsak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
aes-gcm-siv = "0.11.1"
base64 = "0.21.5"
hex-literal = "0.4.1"
openssl = "0.10.61"
rand = "0.8.5"
rand_core = { version = "0.5", default-features = false, features = ["getrandom"] }
tungstenite = "0.21.0"
wasm-bindgen = "0.2.89"
x448 = "0.6.0"
tokio = {version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"]}
warp = {version="*", features = ["tls"]}
futures = "*"
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
uwebsockets_rs = "0.0.11"
tokio-tungstenite = "*"
postgres-openssl = "0.5.0"
postgres = "0.19.7"
tokio-postgres = "0.7.10"
sha3 = "0.10.8"
config = { version = "0.13.4", features = ["json"] }
